# tabula-data-search

./: Cargo.toml  README.MD  named.xlsx
src/: main.rs
src/cache/: mod.rs
src/pub/: home.html
src/search/: core.rs  excel.rs  mod.rs
src/template/: drive.html  mod.rs
