[package]
name = "tabula-data-search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
grep = "0.2.8"
pdf = "0.7.2"
handlebars = "4.1.6"
aho-corasick = "0.7.18"
serde = "1.0.130"
serde_json = "1.0"

[profile.release]
opt-level = 3
